--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="body">
         <!-- Your main content goes here -->
     </div>
-    <script>
+    <!-- <script>
         document.addEventListener("click", function (event) {
             var menuToggle = document.getElementById("menu-toggle");
             var menuItems = document.querySelector(".menu-items");
@@ -50,7 +50,8 @@
                 menuToggle.checked = false;
             }
         });
-    </script>
+    </script> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
